fix: alterando os endpoint de OS pra trabalhar c serviço e peça e não itens num geral
