# docs/openapi.yaml
@@ -620,7 +620,9 @@ components:
 
     CriarOrdemServicoRequest:
       type: object
-      required: [cliente_id, veiculo_id, itens]
+      required:
+        - cliente_id
+        - veiculo_id
       properties:
         cliente_id:
           type: string
@@ -630,11 +632,38 @@ components:
           format: uuid
         descricao:
           type: string
-        itens:
+        servicos:
           type: array
-          minItems: 1
           items:
-            $ref: '#/components/schemas/ItemOsRequest'
+            $ref: "#/components/schemas/ItemServicoOSRequest"
+        pecas:
+          type: array
+          items:
+            $ref: "#/components/schemas/ItemPecaOSRequest"
+
+    ItemServicoOSRequest:
+      type: object
+      required:
+        - servico_id
+      properties:
+        servico_id:
+          type: string
+          format: uuid
+        quantidade:
+          type: integer
+          default: 1
+
+    ItemPecaOSRequest:
+      type: object
+      required:
+        - peca_id
+      properties:
+        peca_id:
+          type: string
+          format: uuid
+        quantidade:
+          type: integer
+          default: 1
 
     OrdemServicoResponse:
       type: object
@@ -680,10 +709,14 @@ components:
         atualizado_em:
           type: string
           format: date-time
-        itens:
+        servicos:
           type: array
           items:
-            $ref: '#/components/schemas/ItemOsResponse'
+            $ref: '#/components/schemas/ItemServicoOSResponse'
+        pecas:
+          type: array
+          items:
+            $ref: '#/components/schemas/ItemPecaOSResponse'
         cliente:
           $ref: '#/components/schemas/ClienteResumoResponse'
         veiculo:
@@ -747,6 +780,46 @@ components:
         total_execucoes:
           type: integer
         tempo_medio_minutos:
+          type: number
+          format: double
+    
+    ItemServicoOSResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        servico_id:
+          type: string
+          format: uuid
+        nome:
+          type: string
+        quantidade:
+          type: integer
+        preco_unitario:
+          type: number
+          format: double
+        subtotal:
+          type: number
+          format: double
+
+    ItemPecaOSResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        peca_id:
+          type: string
+          format: uuid
+        nome:
+          type: string
+        quantidade:
+          type: integer
+        preco_unitario:
+          type: number
+          format: double
+        subtotal:
           type: number
           format: double
 
